Fix nav menu dropdown not covering content

--- a/src/components/nav-links/nav-links.css
+++ b/src/components/nav-links/nav-links.css
@@ -17,6 +17,7 @@
 }
 
 .page-header .nav-links.open {
+    height: calc(100vh - 66px);
     max-height: calc(100vh - 66px);
     padding: 40px 0;
     opacity: 1;
